# retrobat-portable

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPENDENCIES.md  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
catalog/: browse-library-v2.json  featured-v1.json  homebrew-hub-browse-v1.json  iconic-library-v1.json  trusted-v1.json
packaging/: README-FIRST.txt  RetroPort-Linux.desktop  SHA256SUMS  THIRD-PARTY-ASSETS.txt  VERIFY-LINUX.sh  VERIFY-WINDOWS.cmd  VERIFY-WINDOWS.ps1
src/: artwork.rs  browse.rs  browse_install.rs  catalog.rs  controller_guard.rs  controls.rs  featured.rs  firmware.rs  import.rs  install.rs  launch.rs  lib.rs  main.rs  paths.rs  readiness.rs  sources.rs
src/sources/: homebrew_hub.rs
tests/: live_source.rs
tools/: bootstrap_bundle.sh  bootstrap_retrobat_base.sh  bootstrap_supplementary_runtime.sh  build_browse_catalog.py  build_bundle_checksums.sh  build_classics_catalog.py  build_controls_catalog.py  build_featured_catalog.py  build_iconic_catalog.py  build_source_snapshot.py  deploy_bundle.sh  run_latest_linux.sh
